fixed layout issue and container overlaps

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -233,8 +233,8 @@ li:nth-child(5) > a > svg {
 
 @media (max-width:500px){
   .dp {
-    left: -6px !important;
-    font-size: 24px !important;
+    left: -6px;
+    font-size: 24px;
     bottom: 8px;
   }
   .nav-container {
