--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -30,7 +30,7 @@ img.davidbeach {
   }
 @media (max-width: 500px){
 .main-content {
-  max-width: 90%;
+  max-width: 100vw;
   position: relative;
   top: -19px;
   margin-right: auto;
