--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -14,7 +14,7 @@
   top: -9px;
   left: -21px;
   text-align: left;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 .post {
   padding-bottom: 7px;
